# lumberstack-cli

./: .gitignore  Cargo.toml  LICENSE.md  README.md  default_config.json  example.lumberstack.yml  foo.yml  lumberstack.json  lumberstack.out  lumberstack.yml  manifest.yml  playbook.yml  test.yml  tmp.config.json
.github/workflows/: release.yml
src/: ansible.rs  app_config.rs  cli_args.rs  commands.rs  config_file.rs  default_config.rs  engine.rs  exec_command.rs  file_io.rs  init.rs  logger.rs  lumberstack.rs  main.rs  manifest.rs  playbook.rs  progress.rs  redwood.rs  spinner.rs  sys_checks.rs  system.rs  tags.rs  tasks.rs  templates.rs  ui.rs
src/ansible/: core.rs  exec.rs  mod.rs  playbook.rs  task_builders.rs
src/ansible/playbook/: create.rs  mod.rs  playbook_builder.rs
src/cli/: app_paths.rs  arguments.rs  logger.rs  mod.rs  progress.rs
src/configuration/: default_config.json  mod.rs
src/docker/: compose.rs
src/engine/: file_io.rs
src/framework/: mod.rs
src/framework/docker/: compose.rs
src/framework/redwood/: auth.rs  create.rs  generate.rs  mod.rs
src/generators/: mod.rs
src/generators/docker/: cmds.rs  mod.rs  template.rs
src/generators/heroku/: auth.rs  mod.rs  template.rs
src/generators/playwright/: cmds.rs  mod.rs
src/generators/prisma/: cmds.rs  mod.rs  templates.rs
src/generators/redwood/: cmds.rs  mod.rs  templates.rs
src/generators/tailwind/: mod.rs
src/generators/templates/: env.rs  github.rs  markdown.rs  mod.rs  scripts.rs
src/redwood/: auth.rs  create.rs  mod.rs
src/system/: checks.rs  cli_args.rs  config_file.rs  error.rs  file_io.rs  logger.rs  mod.rs  shell.rs  spinner.rs  utils.rs
src/task_definitions/: mod.rs  task_types.rs
src/task_definitions/ansible/: mod.rs  (+1 more)
src/templates/: clone.rs  file_io.rs  init.rs  mod.rs  parse.rs
src/ui/: app.rs  common.rs  events.rs  handlers.rs  home_view.rs  init.rs  inputs.rs  key_events.rs  layout.rs  mod.rs  router.rs  screens.rs  start_ui.rs  table.rs  tag_select.rs  term.rs  theme.rs  views.rs
templates/: .env.template  LICENSE.md.template  docker-compose.yml.template
templates/heroku/: pm2.index.js.template
templates/redwood/: .env.template  docker-compose.template
(+58 files in other folders)
