[package]
name = "lumberstack"
version = "0.2.0"
edition = "2021"
authors = [ "archae0pteryx <ryan@sudormrf.me>" ]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
clap = { version = "3.0", features = ["derive"] }
exitcode = "1.1.2"
indicatif = "0.17.0"
serde_json = "1.0"
clap-verbosity-flag = "1.0.1"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
fs_extra = "1.2.0"
walkdir = "2.3.2"
image = "0.24.3"
