[package]
name = "lumberstack"
version = "0.2.3"
edition = "2021"
authors = [ "archae0pteryx <ryan@sudormrf.me>" ]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
clap = { version = "3.0", features = ["derive"] }
exitcode = "1.1.2"
indicatif = "0.17.0"
# serde_derive = "1.0.145"
serde_json = "1.0"
serde_yaml = "0.9"
serde_merge = "0.1.3"
clap-verbosity-flag = "1.0.1"
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.144", features = ["derive"] }
fs_extra = "1.2.0"
# walkdir = "2.3.2"
image = "0.24.3"
ignore = "0.4.18"
regex = "1.6.0"
lazy_static = "1.4.0"
anyhow = "1.0.65"
# question = "0.2.2"
# aho-corasick = "0.7.19"
# mockall = "0.11.2"
 phf = { version = "0.11", features = ["macros"] }
