[package]
name = "lumberstack"
version = "0.2.3"
edition = "2021"
authors = [ "archae0pteryx <ryan@sudormrf.me>" ]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
anyhow = "1.0.65"
clap = { version = "3.0", features = ["derive"] }
clap-verbosity-flag = "1.0.1"
env_logger = "0.9.0"
exitcode = "1.1.2"
fs_extra = "1.2.0"
ignore = "0.4.18"
image = "0.24.3"
indicatif = "0.17.0"
lazy_static = "1.4.0"
log = "0.4.17"
phf = { version = "0.11", features = ["macros"] }
regex = "1.6.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0"
serde_merge = "0.1.3"
serde_yaml = "0.9"
tui = { version = "0.16.0", features = ["crossterm"], default-features = false }
crossterm = "0.20"
enum-iterator = "1.2.0"
strum = { version = "0.24.1", features = ["derive"] }
# tokio = { version = "1", features = ["full"] }
